RESOLVED FIXED163888
MediaEndpointConfiguration does not need to be refcounted
https://bugs.webkit.org/show_bug.cgi?id=163888
Summary MediaEndpointConfiguration does not need to be refcounted
youenn fablet
Reported 2016-10-24 07:02:33 PDT
Move operations should be sufficient
Attachments
Patch (15.69 KB, patch)
2016-10-24 07:10 PDT, youenn fablet
no flags
Patch (16.21 KB, patch)
2016-10-25 03:01 PDT, youenn fablet
no flags
Patch (16.21 KB, patch)
2016-10-25 05:01 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2016-10-24 07:10:17 PDT
Eric Carlson
Comment 2 2016-10-24 08:37:53 PDT
Comment on attachment 292607 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=292607&action=review > Source/WebCore/Modules/mediastream/MediaEndpointPeerConnection.cpp:629 > + m_mediaEndpoint->setConfiguration({ WTFMove(iceServers), configuration.iceTransportPolicy(), configuration.bundlePolicy() }); You may need to add a IceServerInfo constructor because some of the linux bots still use GCC 4.9 (if it fails, it won't be caught by the EWS bots). See the comments in bug163255 and bug162147.
youenn fablet
Comment 3 2016-10-24 14:44:50 PDT
(In reply to comment #2) > Comment on attachment 292607 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=292607&action=review > > > Source/WebCore/Modules/mediastream/MediaEndpointPeerConnection.cpp:629 > > + m_mediaEndpoint->setConfiguration({ WTFMove(iceServers), configuration.iceTransportPolicy(), configuration.bundlePolicy() }); > > You may need to add a IceServerInfo constructor because some of the linux > bots still use GCC 4.9 (if it fails, it won't be caught by the EWS bots). > See the comments in bug163255 and bug162147. Thanks for the pointer, I will update the patch accordingly at landing time or in a future version. I was waiting for the GTK bot before marking patch as r? but it seems gtk bot has some issues.
youenn fablet
Comment 4 2016-10-25 03:01:04 PDT
youenn fablet
Comment 5 2016-10-25 05:01:51 PDT
WebKit Commit Bot
Comment 6 2016-10-25 08:05:28 PDT
Comment on attachment 292745 [details] Patch Clearing flags on attachment: 292745 Committed r207818: <http://trac.webkit.org/changeset/207818>
WebKit Commit Bot
Comment 7 2016-10-25 08:05:32 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.